--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -6,27 +6,27 @@
 
 /* You can override the default Infima variables here. */
 :root {
-    --ifm-color-primary: #3a5664;
-    --ifm-color-primary-dark: #344d5a;
-    --ifm-color-primary-darker: #314955;
-    --ifm-color-primary-darkest: #293c46;
-    --ifm-color-primary-light: #405f6e;
-    --ifm-color-primary-lighter: #436373;
-    --ifm-color-primary-lightest: #4b7082;
-    --ifm-background-color: #fbefdf;
-  --ifm-code-font-size: 115%;
+    --ifm-color-primary: #351565;
+  --ifm-color-primary-dark: #30135b;
+  --ifm-color-primary-darker: #2d1256;
+  --ifm-color-primary-darkest: #250f47;
+  --ifm-color-primary-light: #3a176f;
+  --ifm-color-primary-lighter: #3d1874;
+  --ifm-color-primary-lightest: #451b83;
+  --ifm-code-font-size: 100%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #ff9d2e;
-  --ifm-color-primary-dark: #ff8f10;
-  --ifm-color-primary-darker: #ff8801;
-  --ifm-color-primary-darkest: #d37000;
-  --ifm-color-primary-light: #ffab4c;
-  --ifm-color-primary-lighter: #ffb25b;
-  --ifm-color-primary-lightest: #ffc788;
-  --ifm-code-font-size: 115%;
+    --ifm-color-primary: #ffd3b7;
+  --ifm-color-primary-dark: #ffb88b;
+  --ifm-color-primary-darker: #ffab75;
+  --ifm-color-primary-darkest: #ff8334;
+  --ifm-color-primary-light: #ffeee3;
+  --ifm-color-primary-lighter: #fffbf9;
+  --ifm-color-primary-lightest: #ffffff;
+  --ifm-background-color: #000000;
+  --ifm-code-font-size: 100%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
